--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sanitize-html": "^2.2.0"
   },
   "devDependencies": {
+    "@babel/cli": "7.12.10",
     "@babel/core": "7.12.3",
     "@babel/node": "7.12.10",
     "@babel/plugin-proposal-class-properties": "7.12.1",
@@ -32,17 +33,24 @@
     "@types/compression": "^1.7.0",
     "@types/concurrently": "5.2.1",
     "@types/express": "^4.17.9",
+    "@types/jest": "26.0.19",
+    "@types/marked": "^1.2.1",
     "@types/nodemon": "1.19.0",
     "@types/prettier": "2.1.6",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/rimraf": "3.0.0",
+    "@types/sanitize-html": "^1.27.0",
     "@types/webpack": "4.41.25",
+    "@types/webpack-node-externals": "2.5.0",
+    "babel-jest": "26.6.3",
     "babel-loader": "8.1.0",
     "babel-preset-react-app": "10.0.0",
     "concurrently": "5.3.0",
     "html-webpack-plugin": "4.5.0",
     "husky": "4.3.6",
+    "jest": "26.6.3",
+    "jest-environment-jsdom-sixteen": "1.0.3",
     "lint-staged": "10.5.2",
     "nodemon": "2.0.6",
     "prettier": "2.2.1",
@@ -67,15 +75,16 @@
       "yarn prettier"
     ]
   },
-  "main": "index.js",
   "scripts": {
     "b": "babel-node --extensions \".es6,.js,.es,.jsx,.mjs,.ts,.tsx\"",
+    "b-server": "babel-node --extensions \".es6,.js,.es,.jsx,.mjs,.ts,.tsx\" --conditions=react-server",
     "bundler:dev": "NODE_ENV=development nodemon -- scripts/build.js",
-    "client": "NODE_ENV=development webpack --watch --progress --config webpack.config.js",
+    "client": "NODE_ENV=development webpack --watch --progress --config webpack.client.config.js",
+    "plugin": "babel --extensions \\\".es6,.js,.es,.jsx,.mjs,.ts,.tsx\\\" --watch plugin/**.ts --out-dir ./plugin",
     "prettier": "prettier --write",
     "server": "webpack --watch --progress --config webpack.server.config.js",
-    "server:dev": "NODE_ENV=development nodemon -- --conditions=react-server ./src/api.server.ts",
-    "start": "concurrently \"npm run server:dev\" \"npm run bundler:dev\"",
+    "start": "webpack --watch --progress --config webpack.config.js",
+    "start2": "concurrently \"npm run server:dev\" \"npm run bundler:dev\"",
     "w": "yarn b webpackx.ts"
   }
 }
